fix alignment in safari

--- a/app/assets/stylesheets/signups.css.scss
+++ b/app/assets/stylesheets/signups.css.scss
@@ -10,7 +10,7 @@ body {
 header {
   padding: 40px;
   margin-bottom: 30px;
-  max-width: 500px;
+  max-width: 520px;
   background: white;
   margin: 0 auto;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.24);
